[gd_scene load_steps=17 format=3 uid="uid://fltuapc4psxd"]

[ext_resource type="Script" path="res://Scripts/UI/Controls/MessageMarkdown.gd" id="1_5rvwm"]
[ext_resource type="Script" path="res://addons/markdownlabel/markdownlabel.gd" id="2_5cmtk"]
[ext_resource type="FontFile" uid="uid://dofxcn7kl30km" path="res://addons/markdownlabel/assets/fonts/Fira_Code/FiraCode-VariableFont_wght.ttf" id="2_uss7y"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h1_format.gd" id="3_hh526"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h2_format.gd" id="4_4sci6"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h3_format.gd" id="5_qyua3"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h4_format.gd" id="6_7xri6"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h5_format.gd" id="7_46jbr"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h6_format.gd" id="8_ywchm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjfue"]
resource_local_to_scene = true
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0, 0.592157, 0.478431, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Resource" id="Resource_de4hw"]
resource_local_to_scene = true
script = ExtResource("3_hh526")
font_size = 2.285
is_bold = false
is_italic = false
is_underlined = false

[sub_resource type="Resource" id="Resource_s8if8"]
resource_local_to_scene = true
script = ExtResource("4_4sci6")
font_size = 1.714
is_bold = false
is_italic = false
is_underlined = false

[sub_resource type="Resource" id="Resource_6ck5t"]
resource_local_to_scene = true
script = ExtResource("5_qyua3")
font_size = 1.428
is_bold = false
is_italic = false
is_underlined = false

[sub_resource type="Resource" id="Resource_j3mc0"]
resource_local_to_scene = true
script = ExtResource("6_7xri6")
font_size = 1.142
is_bold = false
is_italic = false
is_underlined = false

[sub_resource type="Resource" id="Resource_whtla"]
resource_local_to_scene = true
script = ExtResource("7_46jbr")
font_size = 1.0
is_bold = false
is_italic = false
is_underlined = false

[sub_resource type="Resource" id="Resource_f738n"]
resource_local_to_scene = true
script = ExtResource("8_ywchm")
font_size = 0.857
is_bold = false
is_italic = false
is_underlined = false

[node name="MessageMarkdown" type="HBoxContainer" node_paths=PackedStringArray("left_control", "right_control", "label")]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_5rvwm")
left_control = NodePath("LeftSplitter")
right_control = NodePath("RightSplitter")
label = NodePath("PanelContainer/MarkdownLabel")
user_message_color = Color(0, 0, 1, 1)
bot_message_color = Color(0, 0.592157, 0.470588, 1)

[node name="LeftSplitter" type="Control" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_hjfue")

[node name="MarkdownLabel" type="RichTextLabel" parent="PanelContainer"]
layout_mode = 2
focus_mode = 2
theme_override_fonts/mono_font = ExtResource("2_uss7y")
bbcode_enabled = true
text = "[code]
print(\"Hello World\")
dddddddgdg
gd	fdgjjj[/code]
smthhdfhfdhdfhhhhh"
fit_content = true
selection_enabled = true
script = ExtResource("2_5cmtk")
markdown_text = "```python
print(\"Hello World\")
dddddddgdg
gd	fdgjjj
```
smthhdfhfdhdfhhhhh"
h1 = SubResource("Resource_de4hw")
h2 = SubResource("Resource_s8if8")
h3 = SubResource("Resource_6ck5t")
h4 = SubResource("Resource_j3mc0")
h5 = SubResource("Resource_whtla")
h6 = SubResource("Resource_f738n")

[node name="RightSplitter" type="Control" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[connection signal="gui_input" from="PanelContainer/MarkdownLabel" to="." method="_on_markdown_label_gui_input"]
